--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <h1>Piedras Angulares 💎</h1>
             <p class="intro">Mujeres que no recibieron reconocimiento (o fue tardido) y fueron sobresalientes en su
-                época.</p>
+                época. Fueron brillantes!</p>
         </div>
     </nav>
 </header>
